<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluestyle"
    android:gravity="center"
    tools:context=".MenuActivity">

    <LinearLayout

        android:layout_width="wrap_content"
        android:padding="10dp"
        android:background="@drawable/frame_blue"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/bluestyle"

                android:layout_width="wrap_content"
                android:text="@string/grammar"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/grammar_button"
                android:padding="5dp"
                android:background="@drawable/frame_blue"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/grammar"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/bluestyle"

                android:layout_width="wrap_content"
                android:text="@string/speaking"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id="@+id/speaking_button"
                app:srcCompat="@drawable/listening"
                android:padding="5dp"
                android:background="@drawable/frame_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/bluestyle"

                android:layout_width="wrap_content"
                android:text="@string/dictionary"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id="@+id/dictionary"
                android:padding="5dp"
                app:srcCompat="@drawable/language"
                android:background="@drawable/frame_blue"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/bluestyle"
                android:layout_width="wrap_content"
                android:text="@string/videolessons"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id="@+id/video_button"
                android:padding="5dp"
                app:srcCompat="@drawable/video"
                android:background="@drawable/frame_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
